@@ -971,6 +971,26 @@ Short(s): \n\r\
 Changes your description to the text specified.  The description \
 is the text seen when someone LOOKs at you.
 
+DIEROLL=\
+Command : DIEROLL\n\r\
+Usage   : DIEROLL D[DIE]/[NUM]D[DIE]/[STAT] ([DIFFICULTY]) \n\r\
+Example : dieroll 3d6\n\r\
+Example : dieroll 1d20\n\r\
+Example : dieroll save vs slash\n\r\
+Example : dieroll strength easy\n\r\
+Short(s): \n\r\
+Makes either a simple die roll, or a stat check, and reports \
+the results publicly.  You can specify a simple die size to \
+roll, or you can specify a stat, or saving throw, and optionally \
+a difficulty.  Valid stats include: STRENGTH, INTELLIGENCE, DEXTERITY, CONSTITUTION, CHARISMA, \
+WISDOM, PARALYSIS, FIRE, COLD, WATER, GAS, MIND, GENERAL, JUSTICE, ACID, \
+ELECTRICITY, POISON, UNDEAD, MAGIC, DISEASE, TRAPS, DETECTION, OVERLOOKING, DOUBT, \
+SAVEBLUNT, SAVEPIERCE, SAVESLASH, SAVESPELLS, SAVEPRAYERS, SAVESONGS, \
+SAVECHANTS.  Difficulties include: RUDIMENTARY, TRIVIAL, SIMPLE, EASY, NORMAL, HARD, \
+DIFFICULT, STRENUOUS, ARDUOUS, MIRACULOUS, IMPROBABLE, INCALCULABLE, IMPOSSIBLE.
+
+
+
 DIETIES=DEITIES
 DIETY=DEITIES
 DEITY=DEITIES
